--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "csvtojson": "^2.0.10",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "moment": "^2.29.4",
     "mongodb": "^5.5.0",
     "mongoose": "^7.1.1",
     "mongoose-paginate-v2": "^1.7.1",
