--- a/BikeappClient/package.json
+++ b/BikeappClient/package.json
@@ -29,7 +29,16 @@
     "eject": "react-scripts eject",
     "lint": "eslint ."
   },
-  "proxy": "http://localhost:3001",
+  "proxy": [
+    {
+      "context": "/api",
+      "target": "http://localhost:3001"
+    },
+    {
+      "context": "/another-api",
+      "target": "http://localhost:10000"
+    }
+  ],
   "eslintConfig": {
     "extends": [
       "react-app",
